database-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: database
  namespace: production

spec:
  replicas: 1

  selector:
    matchLabels:
      app: database

  template:
    metadata:
      labels:
        app: database

    spec:
      containers:
      - name: postgres

        image: postgres:15

        ports:
        - containerPort: 5432
