api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: production

spec:
  selector:
    app: api

  ports:
  - port: 80
    targetPort: 80
