database-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: database-service
  namespace: production

spec:
  selector:
    app: database

  ports:
  - port: 5432
    targetPort: 5432
