networkpolicy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: api-policy
  namespace: production

spec:
  podSelector:
    matchLabels:
      app: api

  policyTypes:
  - Ingress
